// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HamburgerButton /> renders a hamburger button 1`] = `
.c0 {
  position: absolute;
  top: 1em;
  left: 1em;
  width: 1px;
  height: 1px;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  overflow: hidden;
}

<input
  class="c0"
  id="toggle"
  type="checkbox"
/>
`;

exports[`<HamburgerButton /> toggles the hamburger button on change 1`] = `
.c0 {
  position: absolute;
  bottom: 1em;
  right: 1em;
  width: 1px;
  height: 1px;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  overflow: hidden;
}

<input
  class="c0"
  id="toggle"
  type="checkbox"
/>
`;

exports[`<HamburgerButton /> toggles the hamburger button on change 2`] = `
.c0 {
  position: absolute;
  bottom: 1em;
  right: 1em;
  width: 1px;
  height: 1px;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  overflow: hidden;
}

<input
  class="c0"
  id="toggle"
  type="checkbox"
/>
`;
